# ksmbd-tools

./: .travis.yml  AUTHORS  Makefile.am  README  README.md  VERSION  cifsmgr.c  cifsmgr.h  cifsstat.c  configure.ac  hash.c  ksmbd-tools.spec  ksmbd.conf.5.in  ksmbd.conf.example  ksmbd.service  ksmbd.service.in  ksmbdpwd.db.5.in  meson.build  meson_options.txt  smb.conf.5ksmbd.in  smb.conf.example  smb.conf.list
.github/workflows/: c-cpp.yml
Documentation/: configuration.txt
addshare/: Makefile.am  addshare.c  ksmbd.addshare.1.in  ksmbd.addshare.8.in  meson.build  share_admin.c  share_admin.h
adduser/: Makefile.am  adduser.c  ksmbd.adduser.1.in  ksmbd.adduser.8.in  md4_hash.c  meson.build  user_admin.c  user_admin.h
cifsadmin/: Makefile.am  cifsadmin.c  cifsadmin.h  hash.c  user_admin.c
cifsd/: Makefile.am  cifsd.c  config_parser.c  conv.c  dcerpc.c  dcerpc.h  ipc.c  netlink.c  netlink.h  pipecb.c  rpc.c  rpc_srvsvc.c  rpc_wkssvc.c  winreg.c  winreg.h  worker.c  worker_pool.c
cifsd/management/: tree_conn.c
cifsd_admin/: Makefile.am  cifsd_admin.c  md4_hash.h
cifsdadmin/: Makefile.am  cifsdadmin.c  md4_hash.c
cifsshareadd/: Makefile.am  cifsshareadd.c  share_admin.c  share_admin.h
cifssrvd/: Makefile.am  cifssrvd.c  conv.c  dcerpc.c  dcerpc.h  netlink.c  netlink.h  pipecb.c  winreg.c  winreg.h
cifsstat/: Makefile.am  cifsstat.c
cifsuseradd/: Makefile.am  cifsuseradd.c  user_admin.c  user_admin.h
control/: Makefile.am  control.c  ksmbd.control.1.in  ksmbd.control.8.in  meson.build
include/: asn1.h  cifsd.h  cifsd_server.h  cifsdtools.h  cifssrv.h  config_parser.h  error.h  ipc.h  ksmbdtools.h  list.h  netlink.h  nterr.h  ntlmssp.h  rpc.h  rpc_lsarpc.h  rpc_samr.h  rpc_srvsvc.h  rpc_wkssvc.h  smbacl.h  tools.h  usmbdtools.h  version.h  worker.h  worker_pool.h
include/linux/: cifsd_server.h  ksmbd_server.h  usmbd_server.h
include/management/: session.h  share.h  spnego.h  tree_conn.h  user.h
lib/: Makefile.am  asn1.c  cifsdtools.c  config_parser.c  ksmbdtools.c  libcifsd.c  libcifssrv.c  meson.build  netlink.c  usmbdtools.c
lib/management/: session.c  share.c  spnego.c  spnego_krb5.c  spnego_mech.h  tree_conn.c  user.c
manpages/: ksmbd.mountd.8
mountd/: Makefile.am  ipc.c  ksmbd.mountd.1.in  ksmbd.mountd.8.in  meson.build  mountd.c  rpc.c  rpc_lsarpc.c  rpc_samr.c  rpc_srvsvc.c  rpc_wkssvc.c  smbacl.c  worker.c
scripts/: cifsd.service  install.sh
smbshareadd/: Makefile.am  share_admin.h  smbshareadd.c
smbuseradd/: Makefile.am  md4_hash.h  smbuseradd.c  user_admin.c  user_admin.h
tools/: Makefile.am  asn1.c  config_parser.c  meson.build  tools.c
tools/management/: session.c  share.c  spnego.c  spnego_krb5.c  tree_conn.c  user.c
usmbd/: Makefile.am  ipc.c  rpc.c  rpc_srvsvc.c  rpc_wkssvc.c  usmbd.c  worker.c
