mountd = executable(
  'ksmbd.mountd',
  'worker.c',
  'ipc.c',
  'rpc.c',
  'rpc_srvsvc.c',
  'rpc_wkssvc.c',
  'mountd.c',
  'smbacl.c',
  'rpc_samr.c',
  'rpc_lsarpc.c',
  dependencies: [
    glib_dep,
    libnl_dep,
  ],
  include_directories: tools_incdir,
  link_with: libksmbdtools,
  install: true,
  install_dir: get_option('sbindir'),
  c_args: [
    '-DSYSCONFDIR="@0@"'.format(get_option('prefix') / get_option('sysconfdir')),
    '-DRUNSTATEDIR="@0@"'.format(runstatedir),
  ],
)

configure_file(
  input: 'ksmbd.mountd.8.in',
  output: 'ksmbd.mountd.8',
  install_dir: get_option('mandir') / 'man8',
  configuration: in_data,
)
